test the git with my local IDE

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ zhihu_username: 橙子书叔
 linkedIn_username: 
 dribbble_username:
 
-description_footer: 地到尽头天作界。
+description_footer: 
 
 # comments
 # two ways to comment, only choose one, and use your own short name
